# repoask

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  HARNESS.md  README.md  SECURITY.md  SETUP.md  SKILL.md  TODO.md  clippy.toml  deny.toml  flake.nix  justfile  prek.toml  release-plz.toml  rustfmt.toml
.claude-plugin/: plugin.json
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  dependabot-auto-merge.yml  release-plz.yml  release.yml
.metrics/: coverage-baseline
cli/: CHANGELOG.md  Cargo.toml
cli/src/: main.rs
crates/repoask-core/: CHANGELOG.md  Cargo.toml
crates/repoask-core/benches/: indexing.rs  search.rs  tokenizer.rs
crates/repoask-core/src/: bm25.rs  index.rs  investigation.rs  lib.rs  tokenizer.rs  types.rs
crates/repoask-core/src/snapshots/: repoask_core__index__tests__snapshot_code_only_results.snap  repoask_core__index__tests__snapshot_mixed_search_results.snap
crates/repoask-parser/: CHANGELOG.md  Cargo.toml
crates/repoask-parser/src/: language.rs  lib.rs  markdown.rs  oxc.rs  tree_sitter_parser.rs
crates/repoask-parser/src/snapshots/: repoask_parser__markdown__tests__snapshot_readme_like.snap  repoask_parser__oxc__tests__snapshot_mixed_typescript.snap
crates/repoask-repo/: CHANGELOG.md  Cargo.toml
crates/repoask-repo/src/: cache.rs  clone.rs  index_store.rs  investigation_store.rs  lib.rs  module_resolution.rs  parse.rs  repo.rs
crates/repoask-repo/tests/: e2e_fixture_repo.rs
crates/repoask-repo/tests/fixtures/sample-repo/: notes.txt
crates/repoask-repo/tests/fixtures/sample-repo/docs/: guide.md
crates/repoask-repo/tests/fixtures/sample-repo/examples/: demo.ts
crates/repoask-repo/tests/fixtures/sample-repo/src/: auth.ts  index.ts  session.rs
crates/repoask-repo/tests/fixtures/sample-repo/tests/: auth_test.rs
crates/repoask-treesitter/: CHANGELOG.md  Cargo.toml
crates/repoask-treesitter/src/: lib.rs  parser.rs  queries.rs
docs/plans/: 2026-04-05-001-feat-public-surface-overview-plan.md  2026-04-05-002-refactor-program-facts-architecture-plan.md  boost-signals.md  parser-provider.md  repo-map.md
examples/web-typescript-poc/: FINDINGS.md  index.html  package-lock.json  package.json  vite.config.ts
examples/web-typescript-poc/src/: demo.ts  poc.ts  repo-fetcher.ts
scripts/: check-commit-msg.sh  check-coverage-ratchet.sh
skills/repoask/: SKILL.md
wasm/: Cargo.toml
wasm/src/: lib.rs
