[workspace]
resolver = "3"
members = ["crates/*", "cli", "wasm"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ryo-morimoto/repoask"

[workspace.dependencies]
repoask-core = { path = "crates/repoask-core", version = "0.1.0" }
repoask-parser = { path = "crates/repoask-parser", version = "0.1.0" }
repoask-treesitter = { path = "crates/repoask-treesitter", version = "0.1.0" }
repoask-repo = { path = "crates/repoask-repo", version = "0.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["use-std"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
fs2 = "0.4"
wasm-bindgen = "0.2"
thiserror = "2"
insta = { version = "1", features = ["json"] }
proptest = "1"
divan = "0.1"
rust-stemmers = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
oxc_parser = "0.72"
oxc_allocator = "0.72"
oxc_ast = "0.72"
oxc_span = "0.72"
ignore = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"
dead_code = "warn"
missing_docs = "deny"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
# Broad groups (priority -1 so individual lints override)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }

# Pedantic allow-backs (too noisy)
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# --- LLM対策: restriction lints ---
# Panic prevention
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# Debug leftovers
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
todo = "deny"
unimplemented = "deny"
# Force proper error handling
unwrap_in_result = "deny"
# Prevent LLMs from silencing lints
allow_attributes_without_reason = "deny"
# Code quality
clone_on_ref_ptr = "warn"
str_to_string = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
verbose_file_reads = "warn"
shadow_unrelated = "warn"
# Safety
multiple_inherent_impl = "warn"
undocumented_unsafe_blocks = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
