[package]
name = "repoask-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory-opt"]

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
repoask-core.workspace = true
repoask-parser.workspace = true
wasm-bindgen.workspace = true
serde_json.workspace = true
