[package]
name = "repoask-wasm"
description = "WASM bindings for repoask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory-opt"]

[lib]
crate-type = ["cdylib"]
test = false

[lints]
workspace = true

[dependencies]
repoask-core.workspace = true
repoask-parser.workspace = true
wasm-bindgen.workspace = true
serde_json.workspace = true
