[package]
name = "repoask-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
rust-stemmers.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
divan.workspace = true

[[bench]]
name = "tokenizer"
harness = false

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "search"
harness = false
