[package]
name = "repoask-parser"
description = "TypeScript/JavaScript and Markdown parsers for repoask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
repoask-core.workspace = true
thiserror.workspace = true
oxc_parser.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_span.workspace = true

[dev-dependencies]
insta.workspace = true
