[package]
name = "repoask-repo"
description = "Repository cloning, caching, and search orchestration for repoask"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
repoask-core.workspace = true
repoask-parser.workspace = true
repoask-treesitter.workspace = true
crossbeam-channel = "0.5"
ignore.workspace = true
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
postcard.workspace = true
thiserror.workspace = true
dirs.workspace = true
fs2.workspace = true

[dev-dependencies]
tempfile = "3"
